<resources>
    <string name="app_name" translatable="false">AILinkSDKDemo</string>
    <string name="handshake">握手</string>
    <string name="version">版本</string>
    <string name="time">时间</string>
    <string name="baby_hold">锁定</string>


    <string name="rtk_dfu_progress_state_origin"> ready to upgrade </string>
    <string name="rtk_dfu_state_abort_processing">waiting for cancellation...</string>
    <string name="rtk_dfu_state_aborted"> has been cancelled</string>
    <string name="rtk_dfu_state_connect_ota_remote"> connect equipment...</string>
    <string name="rtk_dfu_state_error_processing"> handling errors...</string>
    <string name="rtk_dfu_state_find_ota_remote"> search equipment...</string>
    <string name="rtk_dfu_state_hand_over_processing"> is HandOver...</string>
    <string name="rtk_dfu_state_image_active_success"> The firmware is activated successfully</string>
    <string name="rtk_dfu_state_initialize"> initialization...</string>
    <string name="rtk_dfu_state_known"> unknown</string>
    <string name="rtk_dfu_state_origin"> initialization </string>
    <string name="rtk_dfu_state_ota_send_file"> is sending file %1$d/%2$d …</string>
    <string name="rtk_dfu_state_pending_active_image">Waiting to activate the firmware...</string>
    <string name="rtk_dfu_state_prepare_dfu_processing"> ready to upgrade the environment...</string>
    <string name="rtk_dfu_state_remote_enter_ota"> enter the upgrade mode...</string>
    <string name="rtk_dfu_state_scan_secondary_bud"> is searching for accessory ear equipment...</string>
    <string name="rtk_dfu_state_start"> starting...</string>
    <string name="rtk_dfu_state_start_active_image"> the firmware is activated...</string>
    <string name="rtk_dfu_state_start_ota_processing"> is being upgraded...</string>
    <string name="rtk_dfu_state_upgrade_success"> successful upgrade </string>
    <string name="search">search</string>
    <string name="stop">stop</string>
    <string name="clear">clear</string>
    <string name="open_light">on light</string>
    <string name="close_light">off light</string>
    <string name="upgrade">upgrade</string>
    <string name="schedule_ui">UI schedule</string>
    <string name="schedule_ble">BLE schedule</string>
    <string name="connection_succeeded">connection succeeded:</string>
    <string name="data_written">Data written:</string>
    <string name="data_received">Data received:</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="check_version">version:</string>

    <string name="upgrade_controller">Upgrade controller</string>
    <string name="upgrade_watch">Upgrade instrument</string>

    <string name="sphygmometer">sphygmometer</string>
    <string name="forehead_gun">Forehead gun</string>
    <string name="thermometer">thermometer</string>
    <string name="baby_scale">Baby scale</string>
    <string name="height_meter">Height meter</string>
    <string name="smart_mask">Smart mask</string>
    <string name="baby_body_fat_scale">Baby Body Fat \n Scale</string>
    <string name="broadcast_scale">Broadcast \n scale</string>
    <string name="oximeter">Oximeter</string>
    <string name="wifi_ble_weight_scale">WiFi+Ble \n Body fat scale</string>
    <string name="ble_body_fat_scale">Ble \n Body fat scale</string>
    <string name="wifi_ble_toothbrush">toothbrush \n (wifi+ble)</string>
    <string name="general_settings">Ble \n General settings</string>
    <string name="device_wifi_config">WIFI Device \n (configure wifi)</string>
    <string name="eight_scale">Eight electrode \n scale</string>
    <string name="blood_glucose_meter">Glucometer</string>
    <string name="ota_general">OTA Universal</string>
    <string name="penetrate">Penetrate</string>
    <string name="disconnect">Disconnect</string>
    <string name="filter">filter:</string>
    <string name="power">Power:</string>
    <string name="set_success">Set success</string>
    <string name="set_failure">Set failure</string>
    <string name="set_err">Set error</string>
</resources>
