<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/version" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_sphy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sphygmometer"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_tempgun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forehead_gun"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thermometer"
            android:textSize="12dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_meter"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_smart_mask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_mask"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_baby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_scale"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_baby_body_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_body_fat_scale"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_broadcast_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broadcast_scale"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_broadcast_blood_oxygen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oximeter"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_wifi_ble_weight"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/wifi_ble_weight_scale"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_ble_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_body_fat_scale"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_wifi_ble_tooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_ble_toothbrush"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_ble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_settings"
            android:textSize="12dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/wifi_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_wifi_config"
            android:textSize="12dp" />

        <Button
            android:id="@+id/eight_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight_scale"
            android:textSize="12dp" />

        <Button
            android:id="@+id/glucometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_glucose_meter"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_ota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ota_general"
            android:textSize="12dp" />


        <Button
            android:id="@+id/btn_transmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penetrate"
            android:textSize="12dp" />


    </LinearLayout>

</LinearLayout>